--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,20 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2022,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "modules": true
+    }
   },
-  "plugins": ["@typescript-eslint", "react-hooks"],
+  "plugins": ["@typescript-eslint", "react-hooks", "react"],
   "extends": ["plugin:react/recommended", "plugin:@typescript-eslint/recommended"],
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
+  },
   "rules": {
     "no-console": "warn",
     "@typescript-eslint/camelcase": "off",
@@ -15,6 +25,8 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     //not relevant for a ts project
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/jsx-key": "error",
+    "react/jsx-indent": "warn"
   }
 }
